final version of tutorial 1

--- a/1.IntroToR/index.html
+++ b/1.IntroToR/index.html
@@ -347,6 +347,9 @@ write.csv(metallica_data, &quot;MetallicaData.csv&quot;) # note it will save in 
 <pre><code class="r">library(ggplot2)
 </code></pre>
 
+<pre><code>## Warning: package &#39;ggplot2&#39; was built under R version 3.2.4
+</code></pre>
+
 <pre><code class="r">plot &lt;- ggplot(data = mtcars, aes(mpg, disp))
 plot + geom_point()
 </code></pre>
@@ -367,6 +370,41 @@ plot + geom_point()
 
 </section>
 <section class="slide " id="slide-25">
+  <h2>R Markdown</h2>
+  <ul>
+<li>instead of C+P-ing everything</li>
+<li>Write your report, generate results, insert graphs, etc. all in the same file</li>
+<li>A few hours of learning will save LOTS of time</li>
+<li>Turn your analyses into:
+
+<ul>
+<li>PDF</li>
+<li>Word</li>
+<li>Slides</li>
+<li>HTML (like me!)</li>
+<li>Interactive dashboard</li>
+</ul></li>
+<li>File --&gt; New --&gt; R Markdown (.Rmd file)</li>
+<li>To generate PDF files, you&#39;ll need LaTeX
+
+<ul>
+<li>Mac: <a href="http://www.tug.org/mactex/">http://www.tug.org/mactex/</a></li>
+<li>Windows: <a href="http://miktex.org/">http://miktex.org/</a></li>
+</ul></li>
+<li>We will go into syntax, etc in a future tutorial</li>
+</ul>
+
+</section>
+<section class="slide " id="slide-26">
+  <h2>More resources</h2>
+  <ul>
+<li>Datacamp: datacamp.com/courses/free-introduction-to-r</li>
+<li>R Markdown: <a href="http://rmarkdown.rstudio.com/lesson-1.html">http://rmarkdown.rstudio.com/lesson-1.html</a></li>
+<li>The textbook is great</li>
+</ul>
+
+</section>
+<section class="slide " id="slide-27">
   <h2>References</h2>
   <p>Wikipedia:
 <a href="https://en.wikipedia.org/wiki/R_(programming_language">https://en.wikipedia.org/wiki/R_(programming_language)</a>)</p>
@@ -377,7 +415,7 @@ plot + geom_point()
 <p>Field A, Miles J, Field Z. Discovering Statistics Using R. London: Sage; 2012.</p>
 
 </section>
-<section class="slide " id="slide-26">
+<section class="slide " id="slide-28">
   
   
 </section>
